jenkins/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenkins-deployment
  namespace: jenkins-ns
  labels:
    app: jenkins-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jenkins-server
  template:
    metadata:
      name: jenkins-pod
      labels:
        app: jenkins-server
    spec:
      securityContext:
            fsGroup: 1000
            runAsUser: 1000
      serviceAccountName: jenkins-admin
      containers:
        - name: jenkins
          image: jenkins/jenkins:2.60.3
          resources:
            limits:
              memory: "1Gi"
              cpu: "1000m"
            requests:
              memory: "500Mi"
              cpu: "500m"
          ports:
            - name: httpport
              containerPort: 8080
            - name: jnlpport
              containerPort: 50000
          # livenessProbe:
            # httpGet:
              # path: "/login"
              # port: 8080
            # initialDelaySeconds: 300
            # periodSeconds: 10
            # timeoutSeconds: 5
            # failureThreshold: 5
          # readinessProbe:
            # httpGet:
              # path: "/login"
              # port: 8080
            # initialDelaySeconds: 200
            # periodSeconds: 10
            # timeoutSeconds: 5
            # failureThreshold: 3
          volumeMounts:
            - name: jenkins-data
              mountPath: /var/jenkins_home
      volumes:
        - name: jenkins-data
          persistentVolumeClaim:
              claimName: jenkins-pvc
