jenkins/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: jenkins-service
  namespace: jenkins-ns
spec:
  selector:
    app: jenkins-server
  type: NodePort
  ports:
    - name: jenkins-port
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30007
